[package]
name = "threadstack"
version = "0.3.0"
authors = ["Joseph Garvin <joseph.h.garvin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A more ergonomic and more flexible form of thread local storage."
homepage = "https://github.com/jgarvin/threadstack"
repository = "https://github.com/jgarvin/threadstack"
keywords = ["threads", "globals", "tls"]
categories = ["concurrency", "rust-patterns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
